--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Remove irrelevant garbage
+        run: rm -r .github
       - name: Create Indexes
         uses: Exponential-Workload/create-index-action@master
       - name: Build with Jekyll
